--- a/jinja2_templates/home.html
+++ b/jinja2_templates/home.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<h1 id="title">Nuestros modelos</h1>
+<h1 id="title">Nuestros modelosa</h1>
 
 <div class="image-carousel">
     <div class="images-container">
@@ -31,3 +31,7 @@
     </button>
 </form>
 {% endif %}
+
+{% block script %}
+    <script src="{{ static('js/home.js') }}"></script>
+{% endblock %}
