--- a/jinja2_templates/_base.html
+++ b/jinja2_templates/_base.html
@@ -27,7 +27,10 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url('about') }}">Marca</a>
+                        <a class="nav-link" href="{{ url('contact') }}">Contacto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url('brand') }}">Marca</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url('shoe_list') }}">Zapatos</a>
@@ -57,12 +60,11 @@
         {% endblock content %}
     </div>
     <!-- Bootstrap for JS: animation -->
-    {% block scripts %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="{{ static('js/base.js') }}"></script>
-    <script src="{{ static('js/home.js') }}"></script>
+    {% block scripts %}
     {% endblock scripts%}
 </body>
 
