--- a/jinja2_templates/brand.html
+++ b/jinja2_templates/brand.html
@@ -1,6 +1,6 @@
 {% extends "_base.html" %}
 
-{% block title %}Nosotros{% endblock title %}
+{% block title %}Nuestra Marca{% endblock title %}
 
 {% block content %}
 
