--- a/jinja2_templates/shoes/shoe_list.html
+++ b/jinja2_templates/shoes/shoe_list.html
@@ -5,15 +5,15 @@
 
 {% block content %}
 <h1>Modelos</h1>
-{% for shoe in shoes %}
-{% set detailed_shoe = shoe.get_absolute_url %}
-<div>
-    <h2><a href="{{ shoe.get_absolute_url() }}" class="core-url">{{ shoe.name }}</a></h2>
-    <p>Company: {{ shoe.company }}</p>
-    <p>Description: {{ shoe.description }}</p>
-    <p>Price: {{ shoe.price }}</p>
-    <img src="{{ shoe.image.url }}" alt="{{ shoe.name }}">
-    <p>Stock: {{ shoe.stock }}</p>
-</div>
-{% endfor %}
+    {% for shoe in shoes %}
+    <div>
+        <a href="{{ shoe.get_absolute_url() }}">
+            <h2>{{ shoe.name }}</h2>
+            <img src="{{ shoe.image.url }}" alt="{{ shoe.name }}">
+        </a>
+        <p>Company: {{ shoe.company }}</p>
+        <p>Description: {{ shoe.description }}</p>
+        <p>Price: {{ shoe.price }}</p>
+    </div>
+    {% endfor %}
 {% endblock content %}
