--- a/jinja2_templates/_base.html
+++ b/jinja2_templates/_base.html
@@ -4,6 +4,10 @@
 
 <head>
     <meta charset="utf-8" lang="es">
+    <meta name="description" content="Los zapatos que quieres pero económicos y disponibles mientras haces cualquier cosa.">
+    <meta name="keywords" content="Trendy, Calzado, Economía, Domicilio">
+    <meta name="author" content="DEPICTION">
+    <meta name="robots" content="nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}GLOSS SHOES{% endblock title%}</title>
     <!-- Bootstrap for CSS: style -->
@@ -11,7 +15,8 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Own CSS overridees Bootstrap -->
     <link rel="stylesheet" href="{{ static('css/base.css')}}">
-    <link rel="stylesheet" href="{{ static('css/home.css') }}">
+    {% block style %}
+    {% endblock style %}
     {% block head %}
     {% endblock head %}
 </head>
@@ -19,7 +24,7 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark flex-md-column">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{{ url('home') }}">GLOSS SHOES</a>
+            <a class="navbar-brand" href="{{ url('home') }}">GLOSS SHOES &trade;</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
