--- a/jinja2_templates/home.html
+++ b/jinja2_templates/home.html
@@ -2,34 +2,38 @@
 
 {% block title %}Home{% endblock title%}
 
+{% block style %}
+    <link rel="stylesheet" href="{{ static('css/home.css')}}">
+{% endblock style %}
+
 {% block content %}
-
-<h1 id="title">Nuestros modelosa</h1>
-
-<div class="image-carousel">
-    <div class="images-container">
-        {% for shoe in shoes %}
-        <a class="url-image-wrapper" id="{{ shoe.pk }}" href="{{ shoe.get_absolute_url() }}">
-            <div class="image-wrapper">
-                <img src="{{ shoe.image.url }}" alt="{{ shoe.name }}">
-                <div class="text-overlay name-overlay">{{shoe.name}}</div>
-                <div class="text-overlay price-overlay">${{shoe.price}}</div>
+    <h1 id="title">Nuestros modelosa</h1>
+    <div class="image-carousel">
+        <div class="images-container">
+            {% for shoe in shoes %}
+            <div class="url-image-wrapper" class="url-image-wrapper">
+                <a id="{{ shoe.pk }}" href="{{ shoe.get_absolute_url() }}">
+                    <div class="image-wrapper">
+                        <img src="{{ shoe.image.url }}" alt="{{ shoe.name }}">
+                        <div class="text-overlay name-overlay">{{shoe.name}}</div>
+                        <div class="text-overlay price-overlay">${{shoe.price}}</div>
+                    </div>
+                </a>
             </div>
-        </a>
-        {% endfor %}
+            {% endfor %}
+        </div>
     </div>
-</div>
 {% endblock content %}
 
 {% if user.is_authenticated %}
-<p>Hello {{ user.email }} </p>
-<form method="post" action="{{ url('logout') }}">
-    {{ csrf_input }}
-    Click if you want to
-    <button type="submit">
-        Logged Out
-    </button>
-</form>
+    <p>Hello {{ user.email }} </p>
+    <form method="post" action="{{ url('logout') }}">
+        {{ csrf_input }}
+        Click if you want to
+        <button type="submit">
+            Logged Out
+        </button>
+    </form>
 {% endif %}
 
 {% block script %}
