--- a/jinja2_templates/shoes/shoe_detail.html
+++ b/jinja2_templates/shoes/shoe_detail.html
@@ -1,4 +1,4 @@
-<!-- templates/shoes/shoe_detail.html -->
+<!-- jinja2_templates/shoes/shoe_detail.html -->
 {% extends '_base.html' %}
 
 {% block title %}{{ shoe.name }}{% endblock title %}
@@ -12,8 +12,8 @@
     <div class="shoe-features">
         <img class="shoe-image" src="{{ shoe.image.url }}" alt="{{ shoe.name }}">
         <h2><a href="{{ shoe.get_absolute_url() }}" class="core-url">{{ shoe.name }}</a></h2>
-        <p>Descripción: {{shoe.description}} </p>
-        <p>Price: {{shoe.price}}</p>
+        <p>{{shoe.description}}</p>
+        <p>${{shoe.price}}</p>
         <a href="{{ shoe.get_purchase_url() }}" class="btn btn-light" style="color:darkgoldenrod;"><b>Cómpralos</b></a>
     </div>
 </div>
