--- a/jinja2_templates/shoes/shoe_purchase.html
+++ b/jinja2_templates/shoes/shoe_purchase.html
@@ -3,33 +3,37 @@
 
 {% block title %}Purchase {{ shoe.name }}!{% endblock title %}
 
-{% block content %}
-<div>
-    <img class="shoe-image" src="{{ shoe.image.url }}" alt="{{ shoe.name }}">
-    <h2><a href="{{ shoe.get_absolute_url() }}" class="core-url">{{ shoe.name}}</a></h2>
-    <p>Descripción: {{shoe.description}} </p>
-    <p>Price: {{shoe.price}}</p>
-</div>
+{% block style %}
+    <link rel="stylesheet" href="{{ static('css/shoe-detail.css') }}">
+    <link rel="stylesheet" href="{{ static('css/shoe-purchase.css') }}">
+{% endblock style%}
 
-<form method="post" action="https://sandbox.checkout.payulatam.com/ppp-web-gateway-payu/">
-    <input name="signature" type="hidden" value="{{ signature }}">
-    <input name="referenceCode" type="hidden" value="PAGO003">
-    <input name="merchantId" type="hidden" value="{{ MERCHANT_IDDev }}">
-    <input name="accountId" type="hidden" value="{{ USER_IDDev }}">
-    <input name="description" type="hidden" value="Purchase {{ shoe.name }}-{{ shoe.company }}-${{ shoe.price }}-{{ shoe.pk }}">
-    <input name="amount" type="hidden" value="{{ shoe.price }}"">
-    <input name="tax" type="hidden" value="0">
-    <input name="taxReturnBase" type="hidden" value="0">
-    <input name="currency" type="hidden" value="COP">
-    <input name="test" type="hidden" value="1">
-    <input name="buyerEmail" type="hidden" value="nicalcoca@gmail.com">
-    <input name="responseUrl" type="hidden" value="https://blue-rice-hide.loca.lt/">
-    <input name="confirmationUrl" type="hidden" value="https://blue-rice-hide.loca.lt/">
-    <input name="shippingAddress" type="hidden" value="carrera 67 n 42 - 15">
-    <input name="shippingCity" type="hidden" value="Bogotá">
-    <input name="shippingCountry" type="hidden" value="CO">
-    <input name="Submit" type="submit" value="Send">
-</form>
+{% block content %}
+<div class="shoe-detail">
+    <div class="shoe-features">
+        <img class="shoe-image" src="{{ shoe.image.url }}" alt="{{ shoe.name }}">
+        <div class="name-description-price">
+            <h2><a href="{{ shoe.get_absolute_url() }}" class="core-url">{{ shoe.name}}</a></h2>
+            <p>{{shoe.description}} </p>
+            <p>Materiales</p>
+        </div>
+        <form class="customer-addresses" action="{{ shoe.get_purchase_conf_with_addresses_url() }}" method="get">
+            {{ csrf_input }}
+            <label for="address">Información de Envío y Pago:</label><br>
+            <input type="text" id="address" name="address" placeholder="Tu dirección" required><br>
+            <input type="text" id="address" name="address" placeholder="Torre, Apartamento~" required><br>
+            <input type="text" id="city" name="city" placeholder="Ciudad (Bogotá)" required><br>
+            <input type="text" id="state" name="state" placeholder="Departamento (Bogotá D.C.)" required><br>
+            <input type="text" id="zip_code" name="zip_code" placeholder="Código postal (opcional)"><br>
+            <br>
+                <label for="email">eMail:</label><br>
+                <input type="email" id="email" name="email" placeholder="___@___.com" required><br>
+            <br>
+            <input name="pk" type="hidden" value="{{shoe.pk}}">
+            <button type="submit" class="btn btn-light" style="color:darkgoldenrod;"><b>Recibir mi Compra</b></button>
+        </form>
+    </div>
+</div>
 
 {% endblock content %}
 
